--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cached_network_image: 3.2.1
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.0
+  flutter_html: 3.0.0-alpha.5
   font_awesome_flutter: 10.1.0
   from_css_color: 2.0.0
   functions_client: 1.3.2
