--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   webview_flutter_android: 3.3.1
   webview_flutter_platform_interface: 2.0.2
   webview_flutter_wkwebview: 3.1.1
+  webviewx_plus: 0.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
