--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   app_links: 3.4.1
   auto_size_text: 3.0.0
   cached_network_image: 3.2.1
+  dropdown_button2: 2.0.0
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.0
   flutter_html: 3.0.0-alpha.5
@@ -70,7 +71,6 @@ dependencies:
   webview_flutter_android: 3.3.1
   webview_flutter_platform_interface: 2.0.2
   webview_flutter_wkwebview: 3.1.1
-  webviewx_plus: 0.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
